--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,18 +2,35 @@
 * {
     padding: 0;
     margin: 0;
+
+    
+}
+.navbar {
+    display: flex;
+    justify-content:space-around
 }
 
 .logo {
-    
     width: 20%;
+    display: flex;
+    justify-content: start;
+    
     ;
+
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    margin: auto;
+    padding: 10px;
+    
 
 }
 
 .button {
     display: flex;
-    justify-content: center;
-    padding: 10px
-
+    justify-content: space-between;
+    padding: 10px;
 }
