modificando el navbar

--- a/src/components/CardWidget/CardWidget.css
+++ b/src/components/CardWidget/CardWidget.css
@@ -1,5 +1,12 @@
 .carrito {
     
-    width: 15%;
+    
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 10px;
 
+}
+
+.imagenCarrito {
+    width: 15%;
 }
