pre-entrega proyecto final 2

--- a/src/components/CardWidget/CardWidget.css
+++ b/src/components/CardWidget/CardWidget.css
@@ -1,12 +1,12 @@
 .carrito {
-    
-    
     display: flex;
     justify-content: flex-end;
+    
     padding-right: 10px;
 
 }
 
 .imagenCarrito {
-    width: 15%;
+    width: 80px;
+    
 }
